--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.1.0",
-    
-
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.539.0",
@@ -38,6 +36,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
